--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,12 @@
 	<!-- Label for editor overflow menu option that deletes the current pet -->
 	<string name = "action_delete">Delete</string>
 	
+	<!-- Toast message in editor when new pet has been successfully inserted -->
+	<string name = "editor_insert_pet_successful">Pet saved</string>
+	
+	<!-- Toast message in editor when new pet has failed to be inserted -->
+	<string name = "editor_insert_pet_failed">Error with saving pet</string>
+	
 	<!-- Label for overview category of attributes in the editor -->
 	<string name = "category_overview">Overview</string>
 	
