--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,12 @@
 	<!-- Toast message in editor when new pet has failed to be inserted -->
 	<string name = "editor_insert_pet_failed">Error with saving pet</string>
 	
+	<!-- Toast message in editor when current pet has been successfully updated -->
+	<string name = "editor_update_pet_successful">Pet updated</string>
+	
+	<!-- Toast message in editor when current pet has failed to be updated -->
+	<string name = "editor_update_pet_failed">Error with updating pet</string>
+	
 	<!-- Label for overview category of attributes in the editor -->
 	<string name = "category_overview">Overview</string>
 	
